// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/molecules/AppInput props hideErrors trueならエラーがあっても表示しない 1`] = `
<div>
  <div
    class="flex flex-col untouched pristine pending required"
    data-testid="input-null"
  >
    <!---->
    <input
      class="border-b focus_border-blue-400 focus_outline-none transition-colors duration-300 bg-white p-2"
      data-testid="input"
      id="input-22"
      type="textd"
    />
    <div
      class="flex flex-col md_flex-row flex-col-reverse justify-between text-sm"
    >
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`components/molecules/AppInput props label ラベルとして表示 1`] = `
<div>
  <div
    class="flex flex-col untouched pristine"
    data-testid="input-label"
  >
    <label
      class="text-sm font-bold py-2"
      data-testid="label"
      for="input-11"
    >
      label
    </label>
    <input
      class="border-b focus_border-blue-400 focus_outline-none transition-colors duration-300 bg-white p-2"
      data-testid="input"
      id="input-11"
      name="label"
      type="textd"
    />
    <div
      class="flex flex-col md_flex-row flex-col-reverse justify-between text-sm"
    >
      <div
        data-testid="errors"
      />
      <!---->
    </div>
  </div>
</div>
`;

exports[`components/molecules/AppInput props label 空の場合はlabel要素自体を描画しない 1`] = `
<div>
  <div
    class="flex flex-col untouched pristine"
    data-testid="input-null"
  >
    <!---->
    <input
      class="border-b focus_border-blue-400 focus_outline-none transition-colors duration-300 bg-white p-2"
      data-testid="input"
      id="input-12"
      type="textd"
    />
    <div
      class="flex flex-col md_flex-row flex-col-reverse justify-between text-sm"
    >
      <div
        data-testid="errors"
      />
      <!---->
    </div>
  </div>
</div>
`;

exports[`components/molecules/AppInput props rules maxがあれば文字数カウンターを表示 1`] = `
<div>
  <div
    class="flex flex-col untouched pristine"
    data-testid="input-null"
  >
    <!---->
    <input
      class="border-b focus_border-blue-400 focus_outline-none transition-colors duration-300 bg-white p-2"
      data-testid="input"
      id="input-20"
      type="textd"
    />
    <div
      class="flex flex-col md_flex-row flex-col-reverse justify-between text-sm"
    >
      <div
        data-testid="errors"
      />
      <div
        class="text-gray-500 text-right mt-1"
        data-testid="counter"
      >
        0 / 300
      </div>
    </div>
  </div>
</div>
`;

exports[`components/molecules/AppInput props type checkbox 1`] = `
<div>
  <div
    class="flex flex-col untouched pristine"
    data-testid="input-null"
  >
    <!---->
    <label
      class="cursor-pointer"
      data-testid="input"
    >
      <input
        class="mr-2"
        type="checkbox"
        value=""
      />
      <span>
        
      </span>
    </label>
    <div
      class="flex flex-col md_flex-row flex-col-reverse justify-between text-sm"
    >
      <div
        data-testid="errors"
      />
      <!---->
    </div>
  </div>
</div>
`;

exports[`components/molecules/AppInput props type checkboxgroup 1`] = `
<div>
  <div
    class="flex flex-col untouched pristine"
    data-testid="input-null"
  >
    <!---->
    <div
      class="flex flex-wrap -mx-4 -my-2"
      data-testid="input"
    />
    <div
      class="flex flex-col md_flex-row flex-col-reverse justify-between text-sm"
    >
      <div
        data-testid="errors"
      />
      <!---->
    </div>
  </div>
</div>
`;

exports[`components/molecules/AppInput props type radio 1`] = `
<div>
  <div
    class="flex flex-col untouched pristine"
    data-testid="input-null"
  >
    <!---->
    <div
      class="flex flex-wrap -mx-4 -my-2"
      data-testid="input"
    />
    <div
      class="flex flex-col md_flex-row flex-col-reverse justify-between text-sm"
    >
      <div
        data-testid="errors"
      />
      <!---->
    </div>
  </div>
</div>
`;

exports[`components/molecules/AppInput props type textarea 1`] = `
<div>
  <div
    class="flex flex-col untouched pristine"
    data-testid="input-null"
  >
    <!---->
    <textarea
      class="border-b focus_border-blue-400 focus_outline-none transition-colors duration-300 p-2"
      data-testid="input"
      id="input-10"
      style="height: auto;"
    />
    <div
      class="flex flex-col md_flex-row flex-col-reverse justify-between text-sm"
    >
      <div
        data-testid="errors"
      />
      <!---->
    </div>
  </div>
</div>
`;

exports[`components/molecules/AppInput props value get typeがdatetime-localだった場合は日付文字列にフォーマット 1`] = `
<div>
  <div
    class="flex flex-col untouched pristine"
    data-testid="input-null"
  >
    <!---->
    <input
      class="border-b focus_border-blue-400 focus_outline-none transition-colors duration-300 bg-white p-2"
      data-testid="input"
      id="input-2"
      type="datetime-local"
    />
    <div
      class="flex flex-col md_flex-row flex-col-reverse justify-between text-sm"
    >
      <div
        data-testid="errors"
      />
      <!---->
    </div>
  </div>
</div>
`;

exports[`components/molecules/AppInput props value get v-modelとしてセット 1`] = `
<div>
  <div
    class="flex flex-col untouched pristine"
    data-testid="input-null"
  >
    <!---->
    <input
      class="border-b focus_border-blue-400 focus_outline-none transition-colors duration-300 bg-white p-2"
      data-testid="input"
      id="input-1"
      type="textd"
    />
    <div
      class="flex flex-col md_flex-row flex-col-reverse justify-between text-sm"
    >
      <div
        data-testid="errors"
      />
      <!---->
    </div>
  </div>
</div>
`;

exports[`components/molecules/AppInput renders correctly 1`] = `
<div>
  <div
    class="flex flex-col untouched pristine"
    data-testid="input-null"
  >
    <!---->
    <input
      class="border-b focus_border-blue-400 focus_outline-none transition-colors duration-300 bg-white p-2"
      data-testid="input"
      id="input-0"
      type="textd"
    />
    <div
      class="flex flex-col md_flex-row flex-col-reverse justify-between text-sm"
    >
      <div
        data-testid="errors"
      />
      <!---->
    </div>
  </div>
</div>
`;

exports[`components/molecules/AppInput slots label ラベルとして表示 1`] = `
<div>
  <div
    class="flex flex-col untouched pristine"
    data-testid="input-null"
  >
    <label
      class="text-sm font-bold py-2"
      data-testid="label"
      for="input-23"
    >
      label
    </label>
    <input
      class="border-b focus_border-blue-400 focus_outline-none transition-colors duration-300 bg-white p-2"
      data-testid="input"
      id="input-23"
      type="textd"
    />
    <div
      class="flex flex-col md_flex-row flex-col-reverse justify-between text-sm"
    >
      <div
        data-testid="errors"
      />
      <!---->
    </div>
  </div>
</div>
`;
